--- a/index.html
+++ b/index.html
@@ -26,55 +26,47 @@
       </div>
     </nav>
     <main>
-      <div class="container py-5">
+  <div class="container py-5">
+    <div class="row">
+      <div class="col-md-4">
         <h2 class="text-center mb-4">Bienvenido a New Era</h2>
-        <p class="text-center">
-          En New Era encontrarás las mejores gorras con diseños exclusivos, calidad garantizada 
-          y un estilo único para cada ocasión. Nuestra misión es ofrecer comodidad, moda y autenticidad 
-          en cada uno de nuestros productos.
+        <p>
+          En New Era encontrarás las mejores gorras con diseños exclusivos, 
+          calidad garantizada y un estilo único para cada ocasión. 
         </p>
       </div>
-      <div class="container py-5">
+      <div class="col-md-4">
         <h2 class="text-center mb-4">Nuestros Servicios</h2>
-        <div class="row text-center">
-          <div class="col-md-4">
-            <h3>Venta de Gorras</h3>
-            <p>Gran variedad de modelos y colores para todos los gustos.</p>
-          </div>
-          <div class="col-md-4">
-            <h5>Personalización</h5>
-            <p>Diseña tu propia gorra exclusiva con nuestro servicio de bordado.</p>
-          </div>
-          <div class="col-md-4">
-            <h5>Envíos a Domicilio</h5>
-            <p>Recibe tus gorras en la comodidad de tu hogar en todo el país.</p>
-          </div>
-        </div>
+        <ul>
+          <li>Venta de gorras exclusivas.</li>
+          <li>Personalización con bordado.</li>
+          <li>Envíos a domicilio en todo el país.</li>
+        </ul>
       </div>
-      <div class="container py-5">
+      <div class="col-md-4">
         <h2 class="text-center mb-4">Contáctanos</h2>
         <form>
-          <div class="mb-3">
-            <label for="nombre" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="nombre" placeholder="Tu nombre">
+          <div class="mb-2">
+            <input type="text" class="form-control" placeholder="Tu nombre">
           </div>
-          <div class="mb-3">
-            <label for="correo" class="form-label">Correo</label>
-            <input type="email" class="form-control" id="correo" placeholder="@gmail.com">
+          <div class="mb-2">
+            <input type="email" class="form-control" placeholder="Correo electrónico">
           </div>
-          <div class="mb-3">
-            <label for="mensaje" class="form-label">Mensaje</label>
-            <textarea class="form-control" id="mensaje" rows="4" placeholder="mensaje..."></textarea>
+          <div class="mb-2">
+            <textarea class="form-control" rows="3" placeholder="mensaje"></textarea>
           </div>
           <div class="text-center">
-            <button type="submit" class="btn btn-dark">Enviar</button>
+            <button type="submit" class="btn btn-dark btn-sm">Enviar</button>
           </div>
         </form>
       </div>
-    </main>
+    </div>
+  </div>
+</main>
 
     <footer class="bg-light text-center py-3">
       <p>2025 Gorras New Era</p>
     </footer>
   </body>
 </html>
+
